# Practice-on-SLAM

./: .gitignore  LICENSE  README.md
ceres_curve_fitting/: CMakeLists.txt
ceres_curve_fitting/src/: CMakeLists.txt  ceres_curve_fitting.cpp
custombundle/: CMakeLists.txt
custombundle/common/: BundleParams.h
custombundle/custombundle_ceres/: CMakeLists.txt  SnavelyReprojectionError.h  ceres_bundle.cpp
custombundle/custombundle_g2o/: CMakeLists.txt  bal_class_g2o.h  g2o_bundle.cpp
dense_RGBD/: CMakeLists.txt
dense_RGBD/src/: CMakeLists.txt  octomap_mapping.cpp  point_cloud_mapping.cpp
dense_mapping_monocular/: CMakeLists.txt
dense_mapping_monocular/src/: CMakeLists.txt  dense_mapping_monocular.cpp  dense_mapping_monocular_2.cpp
direct_sparse/: CMakeLists.txt
direct_sparse/src/: CMakeLists.txt  direct_sparse.cpp  direct_sparse_ceres.cpp
feature_extraction/: CMakeLists.txt
feature_extraction/src/: CMakeLists.txt  feature_extraction.cpp
g2o_curve_fitting/: CMakeLists.txt
g2o_curve_fitting/cmake_modules/: FindG2O.cmake
g2o_curve_fitting/src/: CMakeLists.txt  g2o_curve_fitting.cpp
imageBasics/: CMakeLists.txt
imageBasics/src/: CMakeLists.txt  imageBasics.cpp
joinMap/: CMakeLists.txt
joinMap/src/: CMakeLists.txt  joinMap.cpp
loop_closure/: CMakeLists.txt
loop_closure/src/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
pose_estimation_2d2d/: CMakeLists.txt
pose_estimation_2d2d/src/: CMakeLists.txt  pose_estimation_2d2d.cpp
pose_estimation_3d2d/: CMakeLists.txt
pose_estimation_3d2d/src/: CMakeLists.txt  pose_estimation_3d2d.cpp  pose_estimation_3d2d_ceres.cpp  pose_estimation_3d2d_lie_algebra.cpp
pose_estimation_3d3d/: CMakeLists.txt
pose_estimation_3d3d/src/: CMakeLists.txt  pose_estimation_3d3d.cpp  pose_estimation_3d3d_ceres.cpp  pose_estimation_3d3d_lie_algebra.cpp
pose_graph/: CMakeLists.txt  result_gtsam.g2o  result_lie.g2o
pose_graph/src/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp
triangulation/: CMakeLists.txt
triangulation/src/: CMakeLists.txt  triangulation.cpp
useEigen/: CMakeLists.txt  eigenMatrix.cpp
useGeometry/src/: CMakeLists.txt  useGeometry.cpp
useLK/: CMakeLists.txt
useLK/src/: CMakeLists.txt  useLK.cpp
useSophus/: CMakeLists.txt
useSophus/src/: CMakeLists.txt  useSophus.cpp
visual_odometry/: CMakeLists.txt
visual_odometry/cmake_modules/: FindCSparse.cmake
visual_odometry/config/: default.yaml
visual_odometry/include/: common_include.h  frame.h  map.h  mappoint.h  visual_odometry.h
visual_odometry/src/: CMakeLists.txt  camera.cpp  frame.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
visual_odometry/test/: CMakeLists.txt  run_vo.cpp
visual_odometry_2/: CMakeLists.txt
visual_odometry_2/config/: default.yaml
visual_odometry_2/include/: camera.h  common_include.h  config.h  frame.h  g2o_types.h  mappoint.h  visual_odometry.h
visual_odometry_2/src/: config.cpp  frame.cpp  g2o_types.cpp  mappoint.cpp  visual_odometry.cpp
visual_odometry_2/test/: CMakeLists.txt  run_vo2.cpp
